step5 (#1787)
* refactor - 조건문 괄호 추가

* refactor - 메서드 위치 호출 메서드 아래로 변경

* refactor - 차량등록 소스코드 리팩토링

* feat, test - 차량 이름 null 체크

* refactor - get Method 사용 로직 클래스 별로 위임

* refactor - get Method 사용 추가 리팩토링

* refactor - get Method 사용 추가 리팩토링

* refactor - 전체적인 리팩토링

* refactor - InputView 메세지 표기 상수로 변경